<resources>

    <string name="app_name">Clubby Android Demo</string>
    <string name="register_account">Don\'t have a device ID/PSK yet? Register at <a href="http://cloud.cesanta.com">cloud.cesanta.com</a>.</string>
    <string name="device_id">Device ID</string>
    <string name="device_psk">Device PSK</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="hello">Hello</string>
    <string name="route_stats">Route Stats</string>
    <string name="metrics_pub">Metrics Pub</string>
    <string name="talk_to_backend">Talk to backend:</string>
    <string name="talk_to_demo">Talk to <a href="http://demo.cesanta.com">demo.cesanta.com</a>: </string>
    <string name="lcd_add_line">LCD.AddLine</string>
    <string name="led_set">LED.Set</string>
    <string name="led_get">LED.Get</string>

</resources>
